<resources>
    <string name="app_name">Angel</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_to_system">Вход в систему</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="log_in">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="registration_in_sys">Регистрация в системе</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="log_up">Зарегистрироваться</string>
    <string name="wrong_email">Некоректный адресс электронной почты</string>
    <string name="short_password">Пароль должен быть не меньше 8 символов</string>
    <string name="log_in_error">Ошибка входа</string>
    <string name="confirm_password_error">Пароли не совпадают</string>
    <string name="registration_error">Пользователь с такой электронной почтой уже существует</string>
    <string name="photo">Photo</string>
    <string name="take_photo">Сделать фото</string>
    <string name="gallery">Галерея</string>
    <string name="publicate">Опубликовать</string>
    <string name="description">Описание</string>
    <string name="clrear">Очистить</string>
    <string name="Title">Заголовок</string>
    <string name="fragmenr_cant_be_null">Fragment can\'t be null</string>
    <string name="new_person_data_error">Данные введены не верно</string>
    <string name="new_person_error">Ошибка создания объявления</string>
    <string name="new_person_success">Объявление созданно успешно</string>
</resources>
