<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#B12525">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/default_img"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#A9C2C2C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        />

    <TextView
        android:id="@+id/photo_from_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:gravity="center"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider" />


    <TextView
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/divider" />

    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
        android:gravity="center"
        android:text="@string/clrear"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        tools:layout_editor_absoluteY="371dp"
        android:backgroundTint="@color/blue"
        android:textCursorDrawable="@color/blue"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:backgroundTint="@color/blue"
        android:textCursorDrawable="@color/blue"/>

    <Button
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/publicate"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>